[package]
name = "trial"
version = "0.1.0"
edition = "2024"

[dependencies]
json = "0.12.4"
octocrab = "0.54.0"
reqwest = {version="0.13.4", features=["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = {version="1.53.0", features=["full"]}
rustls = { version = "0.23", features = ["ring"] }
